# legal-anonymizer

./: .gitignore  AI_MODEL_GOVERNANCE.md  ARCHITECTURE_OVERVIEW.md  LICENSE  LIMITATIONS_AND_NON_GOALS.md  README.md  RUN_ARTIFACTS.md  SECURITY_CONSIDERATIONS.md  THREAT_MODEL.md
.github/workflows/: build-release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/src/: App.tsx  ModelManager.tsx  api.ts  index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/src/: commands.rs  main.rs  python_sidecar.rs
apps/desktop/src/src/: api.ts  app.ts
docs/: ANONYMIZATION_DESIGN.md  CHANGELOG.md  FINDINGS_REPORT.md  GDPR_COMPLIANCE.md  PRESET_SCHEMA.md  USER_GUIDE.md
engine/python/: build_standalone.py  pyproject.toml
engine/python/anonymizer_engine/: __init__.py  batch.py  docx_scrubber.py  file_dispatcher.py  findings.py  init.py  layer1.py  layer2_candle.py  layer3_presidio.py  model_manager.py  patterns.py  pdf_scrubber.py  preset.py  pseudonym.py  report.py
engine/python/anonymizer_engine/engine/python/anonymizer_engine/: __init__.py
engine/python/scripts/: batch_entrypoint.py  layer2_entrypoint.py  layer3_entrypoint.py  sidecar_entrypoint.py
