[project]
name = "anonymizer-engine"
version = "0.1.0"
description = "Offline-first legal anonymization engine for GDPR-compliant text and document scrubbing"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Legal Anonymizer Team"}
]
keywords = ["anonymization", "gdpr", "privacy", "legal", "nlp", "ner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Security",
]

dependencies = [
    "python-dateutil>=2.9.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
# Layer 1: Fast Legal Scrub (spaCy-based)
layer1 = [
    "spacy>=3.7.0",
]

# Layer 2: Accurate Legal Review (transformer-based)
layer2 = [
    "spacy>=3.7.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
]

# Layer 3: Regulatory Standard (Presidio-based)
layer3 = [
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

# PDF support
pdf = [
    "PyMuPDF>=1.23.0",
]

# DOCX support
docx = [
    "python-docx>=1.1.0",
]

# All features
all = [
    "spacy>=3.7.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
anonymizer-sidecar = "scripts.sidecar_entrypoint:main"
anonymizer-batch = "scripts.batch_entrypoint:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=anonymizer_engine"
